--- a/src/sample/ticTacToe.fxml
+++ b/src/sample/ticTacToe.fxml
@@ -3,34 +3,28 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="98.0" prefWidth="131.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <GridPane layoutY="1.0" prefHeight="400.0" prefWidth="600.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="142.0" prefWidth="200.0" />
-            <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="145.0" prefWidth="206.0" GridPane.columnIndex="1" />
-            <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="148.0" prefWidth="256.0" GridPane.columnIndex="2" />
-            <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="137.0" prefWidth="200.0" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="134.0" prefWidth="206.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="134.0" prefWidth="211.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="141.0" prefWidth="256.0" GridPane.rowIndex="2" />
-            <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="143.0" prefWidth="244.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="139.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-         </children>
-      </GridPane>
+      <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="139.0" prefWidth="200.0" />
+      <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="140.0" prefWidth="200.0" GridPane.columnIndex="1" />
+      <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="135.0" prefWidth="200.0" GridPane.columnIndex="2" />
+      <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="133.0" prefWidth="200.0" GridPane.rowIndex="1" />
+      <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="133.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="138.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+      <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="138.0" prefWidth="200.0" GridPane.rowIndex="2" />
+      <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="137.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Button mnemonicParsing="false" onMouseClicked="#buttonPressed" prefHeight="137.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
    </children>
-</Pane>
+</GridPane>
